# django-migration-linter

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  manage.py  migration_checker.py  migration_linter.py  pyproject.toml  setup.cfg  setup.py  test_migration_checker.py  test_migration_linter.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-build.yml
django_migration_linter/: __init__.py  cache.py  constants.py  migration.py  migration_linter.py  operations.py  sql_analyser.py  utils.py
django_migration_linter/management/: utils.py
django_migration_linter/management/commands/: lintmigrations.py  makemigrations.py
django_migration_linter/sql_analyser/: __init__.py  analyser.py  base.py  mysql.py  postgresql.py  sqlite.py  utils.py
docs/: incompatibilities.md  makemigrations.md  usage.md
docs/internals/: cache.md  publishing.md  testing.md
examples/: example_test_integration.py
requirements/: dev.txt
src/django_migration_linter/: constants.py  migration_linter.py
src/django_migration_linter/management/: utils.py
src/django_migration_linter/sql_analyser/: analyser.py  base.py  postgresql.py
tests/: fixtures.py
tests/functional/: test_cache.py  test_cmd_line_call.py  test_command.py  test_data_migrations.py  test_lintmigrations_command.py  test_makemigrations_command.py  test_migration_linter.py  test_multiple_calls.py
tests/test_project/: settings.py  urls.py  wsgi.py
tests/test_project/app_add_manytomany_field/: apps.py  models.py
tests/test_project/app_add_not_null_column/: apps.py  models.py
tests/test_project/app_add_not_null_column_followed_by_db_default/: models.py
tests/test_project/app_add_not_null_column_followed_by_default/: apps.py  models.py
tests/test_project/app_add_not_null_column_with_null_db_default/: models.py
tests/test_project/app_alter_column/: apps.py  models.py
tests/unit/: test_linter.py  test_management_utils.py  test_sql_analyser.py  test_utils.py
(+201 files in other folders)
